<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginVertical="8dp"
    android:layout_marginHorizontal="8dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNoteTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvMain"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:layout_marginVertical="4dp"/>

        <TextView
            android:id="@+id/tvNoteContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvDescription"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="17sp"
            android:layout_marginVertical="4dp"/>

        <TextView
            android:id="@+id/tvNoteTimeStamp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tvClick"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:gravity="right"
            android:layout_marginVertical="4dp"/>

    </LinearLayout>

</androidx.cardview.widget.CardView>