<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AdminPanelOptions.NewAllSubjects">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarNewAS"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        app:titleTextColor="@color/black"
        android:background="@color/deepSkyBlue"/>

    <TextView
        android:id="@+id/GreetingNewAS"
        android:layout_below="@id/toolbarNewAS"
        android:layout_marginStart="10dp"
        android:layout_marginVertical="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/textGuide1"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_below="@id/GreetingNewAS"
        android:layout_marginVertical="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/editNamesAS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/hintTitleForSubjects"
            android:background="@drawable/rounded_corner_two"/>

        <EditText
            android:id="@+id/editUnamesAS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:textSize="15sp"
            android:textColor="@color/black"
            android:inputType="text"
            android:hint="@string/hintTitleForUnames"
            android:background="@drawable/rounded_corner_two"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonAddAS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/textAddSubject"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:strokeColor="@color/deepSkyBlue"
            app:strokeWidth="2dp"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonNextAS"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/white"
            android:text="@string/nextButton"
            android:textColor="@color/black"
            app:cornerRadius="10dp"
            app:strokeColor="@color/deepSkyBlue"
            app:strokeWidth="2dp"/>

    </LinearLayout>

</RelativeLayout>