<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/deepSkyBlue"
    android:padding="16dp"
    tools:context=".Utils.ReportAProblemActivity">

    <RelativeLayout
        android:id="@+id/reportAProblemTitleBar"
        android:layout_width="match_parent"
        android:background="@color/deepSkyBlue"
        android:paddingTop="8dp"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/reportAProblmeNotesTitle"
            android:layout_toEndOf="@id/reportAProblemBackButton"
            android:text="@string/report_a_problem"
            android:textSize="19sp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:textColor="@color/black"/>

        <ImageButton
            android:id="@+id/reportAProblemBackButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_baseline_arrow_back_24"
            app:tint="@color/black"
            android:layout_marginStart="9dp"
            android:background="?attr/selectableItemBackgroundBorderless"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:id="@+id/reportAProblemSendButton"
            android:layout_alignParentEnd="true"
            android:text="@string/send_button"
            android:textSize="19sp"
            android:layout_marginStart="15dp"
            android:textStyle="bold"
            android:layout_centerVertical="true"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/addNoteFormLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/reportAProblemTitleBar"
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_marginVertical="26dp"
        android:backgroundTint="@color/whiteSmoke"
        android:background="@drawable/rounded_corner_two">

        <EditText
            android:id="@+id/reportAProblemNameText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_black_stroke"
            android:hint="@string/your_name_Label"
            android:textSize="20sp"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/reportAProblemEmailText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_black_stroke"
            android:hint="@string/your_email_label"
            android:textSize="20sp"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/reportAProblemSubjectText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corner_black_stroke"
            android:hint="@string/tvSubject"
            android:textSize="20sp"
            android:layout_marginVertical="8dp"
            android:padding="12dp"
            android:textColorHint="@color/black"
            android:textColor="@color/black"/>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_black_stroke"
            android:layout_marginBottom="10dp">

            <EditText
                android:id="@+id/reportAProblemMessageText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:hint="@string/briefly_explain"
                android:textSize="20sp"
                android:minLines="10"
                android:gravity="top"
                android:layout_marginVertical="8dp"
                android:padding="12dp"
                android:textColorHint="@color/black"
                android:textColor="@color/black"/>

        </ScrollView>

    </LinearLayout>

</RelativeLayout>